angular-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angular-app
  namespace: dev
spec:
  replicas: 3
  selector:
    matchLabels:
      app: angular-app
  template:
    metadata:
      labels:
        app: angular-app
    spec:
      containers:
      - name: angular-app-container
        image: stevymonkam/kuberneteimgfront:1.0
        ports:
        - containerPort: 80
