angular-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: angular-service
  namespace: dev
spec:
  selector:
    app: angular-app
  ports:
    - protocol: TCP
      port: 90
      targetPort: 80
  type: ClusterIP
